--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import Card from '../components/Card.astro';
 
 		console.log(data.get("nome"));
 		
-		fetch(window.location.protocol + "//" + window.location.host + "/api/contato/",
+		fetch("https://restful-api-kappa.vercel.app/api/contato",
 		{ method:"POST", body: json, headers: {"Content-Type": "application/json"} })
 		.then(res => res.json())
 		.then(response => {
