--- a/src/pages/inform.astro
+++ b/src/pages/inform.astro
@@ -1,6 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+const password = Astro.url.searchParams.get('pass');
+const authenticated = password == import.meta.env.MY_PASSWORD;
+
+if (!authenticated)
+	return Astro.redirect("/404");
 ---
 
 <!DOCTYPE html>
@@ -38,6 +41,10 @@ import Card from '../components/Card.astro';
                             <p class="error-text text-danger fw-semibold mb-4 visually-hidden" style="font-size: 16px;"> CPF não está na lista de inscritos! </p>
                         </div>
 
+                        <div class="text-center">
+                            <p class="error-text text-danger fw-semibold mb-4" style="font-size: 16px;"> Informe seus gastos: </p>
+                        </div>
+
                         <form id="cpf">
                             <div class="col-12 col-md-10 mb-3">
                                 <label for="exampleFormControlInput3" class="form-label fw-bold">Senha: <span class="text-danger">*</span></label>
@@ -58,19 +65,6 @@ import Card from '../components/Card.astro';
         </div>
         
         <script>
-
-			function makeid(length) {
-				let result = '';
-				const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-				const charactersLength = characters.length;
-				let counter = 0;
-				while (counter < length) {
-					result += characters.charAt(Math.floor(Math.random() * charactersLength));
-					counter += 1;
-				}
-				return result;
-			}
-
             window.onload = () => {
                 const form = document.getElementById("cpf") as HTMLFormElement;
 
@@ -93,9 +87,6 @@ import Card from '../components/Card.astro';
                     .then(res => res.json())
                     .then(response => {
 						console.log(response.message)
-						if (response.message == "success") {
-							window.location.href = window.location.protocol + "//" + window.location.host + `/inform?sessionid=${makeid(100)}&sessionduration=${makeid(100)}&pass=${data.get("pass")}&passcodec=${makeid(100)}`;
-						}
 					});
 				}
 
