--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,6 @@ import Card from '../components/Card.astro';
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="icon" href="https://www.nad-edu.com.br/_astro/icon-192.e0b72ef9.webp" sizes="192x192">
-
 
         <!-- <meta property="og:image" content={SITE_URL + ogImage}>
         <link rel="icon" href={icon} sizes="192x192"> -->
@@ -23,32 +21,35 @@ import Card from '../components/Card.astro';
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
-		<title>Gere seu QR code para o congresso</title>
+        
+		<title>Expense Tracker</title>
 
 	</head>
 	<body>
 
         <div class="d-flex justify-content-center align-items-center py-5">
             <div class="container-fluid">
-                <div class="row justify-content-center align-items-center mt-5">
+                <div class="row justify-content-center align-items-center mt-2">
                     <div class="col-12 col-sm-6 col-lg-4 mx-auto text-start mt-2 mt-md-0">
 
-                        <div class="text-center">
-                            <p class="error-text text-danger fw-semibold mb-4 visually-hidden" style="font-size: 16px;"> CPF não está na lista de inscritos! </p>
+                        <div class="head-title text-center text-sm-start">
+                            <p class="fw-bold mb-5" style="font-size: 30px;"> Expense Tracker </p>
+                        </div>
+
+                        <div class="isthatyou text-center text-sm-start">
+                            <p class="fw-semibold mb-5" style="font-size: 18px;"> Olá Cícero! É você mesmo? </p>
                         </div>
 
                         <form id="cpf">
                             <div class="col-12 col-md-10 mb-3">
-                                <label for="exampleFormControlInput3" class="form-label fw-bold">Senha: <span class="text-danger">*</span></label>
+                                <label for="exampleFormControlInput3" class="form-label fw-bold">Informe sua senha: <span class="text-danger">*</span></label>
                                 <input name="pass" type="password" class="form-control" id="exampleFormControlInput3" required>
-                                <div id="cpfHelp" class="form-text fw-medium">Digite apenas números.</div>
-                                <div id="cpfInvalido" class="form-text text-danger fw-semibold visually-hidden" style="font-size: 12px;">CPF inválido, todos os dígitos estão corretos?</div>
+                                <div id="senhaIncorreta" class="form-text text-danger fw-semibold visually-hidden" style="font-size: 12px;">Senha incorreta!</div>
                             </div>
                             <span class="load-spinner loader me-2 visually-hidden" aria-hidden="true"></span>
                             <button type="submit" class="btn btn-dark btn-form py-2 px-3">
-                                <span class="button-text" role="status">Enviar</span>
-                                <span class="visually-hidden load-text" role="status">Consultando...</span>
+                                <span class="button-text fw-semibold" role="status">Enviar</span>
+                                <span class="visually-hidden load-text fw-semibold" role="status">Consultando...</span>
                             </button>
                         </form>
                         
@@ -95,24 +96,19 @@ import Card from '../components/Card.astro';
 						console.log(response.message)
 						if (response.message == "success") {
 							window.location.href = window.location.protocol + "//" + window.location.host + `/inform?sessionid=${makeid(100)}&sessionduration=${makeid(100)}&pass=${data.get("pass")}&passcodec=${makeid(100)}`;
-						}
+						} else {
+                            showMessage();
+                        }
 					});
 				}
 
-                // function showMessage(success) {
-                    
-                //     if (success) { handleSuccess(form) }
-
-                //     else { 
-                //         toggleLoad(form);
-                //         form.querySelector("#cpfHelp").classList.toggle("visually-hidden");
-                //         form.querySelector("#cpfInvalido").classList.toggle("visually-hidden");
-                //         setTimeout(() => {
-                //             form.querySelector("#cpfHelp").classList.toggle("visually-hidden");
-                //             form.querySelector("#cpfInvalido").classList.toggle("visually-hidden");
-                //         }, 7000);
-                //     }
-                // }
+                function showMessage() {
+                    toggleLoad(form);
+                    form.querySelector("#senhaIncorreta").classList.toggle("visually-hidden");
+                    setTimeout(() => {
+                        form.querySelector("#senhaIncorreta").classList.toggle("visually-hidden");
+                    }, 7000);
+                }
 			};
 
                 
@@ -122,6 +118,8 @@ import Card from '../components/Card.astro';
 
             body {
                 font-family: Montserrat, sans-serif;
+                background-color: #1d040d;
+                color: #e0ffc7;
             }
 
             #navbar-logo {
@@ -138,19 +136,7 @@ import Card from '../components/Card.astro';
                 height: 17px;
                 animation: spin 1s linear infinite;
             }
-        
-            .success-message, .fail-message {
-                padding: 20px;
-                font-weight: 500;
-                font-size: 15px;
-                background: #e0ffc7;
-                border: 1px solid #b4d39b;
-            }
-        
-            .fail-message {
-                background: #ffd7c7;
-                border: 1px solid #d39b9b;
-            }
+    
 
             @keyframes spin {
                 0% { transform: rotate(0deg); }
