--- a/src/pages/inform.astro
+++ b/src/pages/inform.astro
@@ -1,9 +1,18 @@
 ---
+import { XataClient } from "../xata";
 const password = Astro.url.searchParams.get('pass');
 const authenticated = password == import.meta.env.MY_PASSWORD;
 
 if (!authenticated)
 	return Astro.redirect("/404");
+
+const client = new XataClient({
+    apiKey: import.meta.env.XATA_API_KEY,
+    branch: import.meta.env.XATA_BRANCH
+});
+
+const categories = await client.db.categories.getAll();
+
 ---
 
 <!DOCTYPE html>
@@ -54,20 +63,9 @@ if (!authenticated)
                                 aria-label="Default select example"
                                 required>
                                     <option selected>Selecione</option>
-                                    <option value="1">Comida e/ou bebida</option>
-                                    <option value="2">Utensílios de limpeza</option>
-                                    <option value="3">Uber</option>
-                                    <option value="4">Roupas</option>
-                                    <option value="5">Acessórios pessoais</option>
-                                    <option value="6">Cinema</option>
-                                    <option value="7">Academia</option>
-                                    <option value="8">Terapia</option>
-                                    <option value="9">Internet</option>
-                                    <option value="10">Aluguel</option>
-                                    <option value="11">Acessórios de tecnologia</option>
-                                    <option value="12">Ônibus</option>
-                                    <option value="13">Maconha</option>
-                                    <option value="14">Utensílios para casa</option>
+                                    {categories.map((c, index) => (
+                                        <option value={index}>{c.category}</option>
+                                    ))}
                                     <option value="outro">Adicionar categoria</option>
                                 </select>
                                 <label for="outro" id="outraCatergoriaLabel" class="form-label fw-bold mt-3" style="display: none">Adicione a nova categoria: <span class="text-danger">*</span></label>
@@ -75,8 +73,9 @@ if (!authenticated)
                             </div>
                             <div class="col-12 col-md-10 mb-3">
                                 <label for="exampleFormControlInput3" class="form-label fw-bold">Informe o preço: <span class="text-danger">*</span></label>
-                                <input name="pass" type="number" step="0.01" class="form-control" id="exampleFormControlInput3" required>
-                                <div id="senhaIncorreta" class="form-text text-danger fw-semibold visually-hidden" style="font-size: 12px;">Senha incorreta!</div>
+                                <input name="price" type="number" step="0.01" class="form-control" id="exampleFormControlInput3" required>
+                                <div id="sucesso" class="mt-3 form-text text-light text-center fw-semibold visually-hidden" style="font-size: 18px;">Sucesso!</div>
+                                <div id="falha" class="mt-3 form-text text-danger text-center fw-semibold visually-hidden" style="font-size: 18px;">Falha!</div>
                             </div>
                             <span class="load-spinner loader me-2 visually-hidden" aria-hidden="true"></span>
                             <button type="submit" class="btn btn-dark btn-form py-2 px-3">
@@ -132,37 +131,52 @@ if (!authenticated)
                     toggleLoad(form);
 
 					var data = new FormData(form);
+                    var outraCategoria = '';
+                    var selectedText = '';
 
-                    var object = {};
+                    var dataObj = {};
                     data.forEach(function(value, key){
-                        object[key] = value;
+                        dataObj[key] = value;
                     });
 
                     var select = document.getElementById("select") as HTMLSelectElement;
-                    const selectedText = select.options[select.selectedIndex].text;
-
-                    console.log(object)
+                    if (select.value == "outro") {
+                        outraCategoria = dataObj['outro'];
+                    } else {
+                        selectedText = select.options[select.selectedIndex].text;
+                    }
+                    
+                    console.log(dataObj)
                     console.log(selectedText)
 
-					fetch(window.location.protocol + "//" + window.location.host + "/api/login", 
-                    { method:"POST", body:JSON.stringify({pass: data.get("pass")}), headers: {"Content-Type": "application/json"}})
+					fetch(window.location.protocol + "//" + window.location.host + "/api/contato", 
+                    { method:"POST", body:JSON.stringify({price: dataObj['price'], selectedText: selectedText, outraCategoria: outraCategoria}), headers: {"Content-Type": "application/json"}})
                     .then(res => res.json())
                     .then(response => {
-						console.log(response.message)
 						if (response.message == "success") {
-							window.location.href = window.location.protocol + "//" + window.location.host + `/inform?sessionid=${makeid(100)}&sessionduration=${makeid(100)}&pass=${data.get("pass")}&passcodec=${makeid(100)}`;
+                            form.reset();
+                            showMessage(true);
 						} else {
-                            showMessage();
+                            showMessage(false);
                         }
-					});
+					}).catch(e => {
+                        showMessage(false);
+                    })
 				}
 
-                function showMessage() {
+                function showMessage(success) {
                     toggleLoad(form);
-                    form.querySelector("#senhaIncorreta").classList.toggle("visually-hidden");
-                    setTimeout(() => {
-                        form.querySelector("#senhaIncorreta").classList.toggle("visually-hidden");
-                    }, 7000);
+                    if (success) {
+                        form.querySelector("#sucesso").classList.toggle("visually-hidden");
+                        setTimeout(() => {
+                            form.querySelector("#sucesso").classList.toggle("visually-hidden");
+                        }, 7000);
+                    } else {
+                        form.querySelector("#falha").classList.toggle("visually-hidden");
+                        setTimeout(() => {
+                            form.querySelector("#falha").classList.toggle("visually-hidden");
+                        }, 7000);
+                    }
                 }
 			};
 
