--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import Card from '../components/Card.astro';
             </div>
         </div>
         
-        <script>
+        <script is:inline>
 
 			function makeid(length) {
 				let result = '';
@@ -73,7 +73,7 @@ import Card from '../components/Card.astro';
 			}
 
             window.onload = () => {
-                const form = document.getElementById("cpf") as HTMLFormElement;
+                const form = document.getElementById("cpf");
 
                 form.addEventListener('submit',	handleSubmit);
 
@@ -148,44 +148,6 @@ import Card from '../components/Card.astro';
 
 </html>
 
-
-<script>
-
-	var form: HTMLElement = document.getElementById("contact");
-
-	if (!form) throw new Error("Formulário não existe!");
-	
-	form.addEventListener("submit", ajaxpost);
-
-	function ajaxpost(event: Event) {
-		event.preventDefault();
-
-		var data = new FormData(form as HTMLFormElement);
-
-		var dataJson: any = {}
-		data.forEach((value, key) => dataJson[key] = value);
-		var json = JSON.stringify(dataJson);
-
-
-		console.log(data.get("nome"));
-		
-		fetch(window.location.protocol + "//" + window.location.host + "/api/contato",
-		{ method:"POST", body: json, headers: {"Content-Type": "application/json"} })
-		.then(res => res.json())
-		.then(response => {
-			console.log(response)
-			if (response.result == "success") {
-
-				console.log("funcionou cara de tatu") 
-			}
-		}).catch(err => {
-
-			console.error(err);
-
-		});
-		return false;
-	}
-</script>
 
 <style>
 	main {
